--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </p>
     </header>
     <main class="main">
-      <section class="section section__rows">
+      <section class="section section__about-concentration">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="article__list">
           <article class="article__list-item">
@@ -77,7 +77,7 @@
             <h3 class="article__title text-decor">Дофамин</h3>
             <p class="article__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
-              нашей невозможности сосредоточиться замешана и полная 
+              нашей невозможности сосредоточиться замешана и полная w
               противоположность стрессу — дофамин. Это вещество участвует в
               системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
               от важной задачи на что-то более «приятное» для мозгов. Например,
@@ -88,7 +88,7 @@
           </article>
         </div>
       </section>
-      <section class="section section__columns">
+      <section class="section section__about-concentration-reductions">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="article__list">
           <article class="article__list-item">
@@ -127,7 +127,7 @@
           </article>
         </div>
       </section>
-      <section class="section section__rows">
+      <section class="section section__about-concentration">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
